force-app/main/default/objects/Phase__c/Phase__c.object-meta.xml
<CustomObject>
    <label>Phase</label>
    <nameField>
        <label>Phase Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>