force-app/main/default/objects/Phase__c/fields/Phasecode__c.field-meta.xml
<CustomField>
    <fullName>Phasecode__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>รหัสของ Phase</description>
    <externalId>true</externalId>
    <label>Phase code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>