force-app/main/default/objects/Phase__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Phase นี้อยู่ใน Project ไหน</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Phases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>