force-app/main/default/objects/Phase__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Phasecode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Phase</label>
</ListView>